# tiznitbms

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.hpp  mainCustomer.cpp  mainTeller.cpp
.github/workflows/: build.yml
automation/: generate_db.py
bms/inc/: account.hpp  customer.hpp  db.hpp  dbFactory.hpp  person.hpp  sqlite3db.hpp  teller.hpp  utils.hpp
bms/src/: customer.cpp  db.cpp  person.cpp  sqlite3db.cpp  teller.cpp  utils.cpp
inc/: account.hpp  config.hpp.in  customer.hpp  db.hpp  person.hpp  sqlite3db.hpp  teller.hpp  utils.hpp
inc/interface/: customerCLI.hpp  customerInterface.hpp  tellerCLI.hpp  tellerInterface.hpp  userInterface.hpp
init/inc/: initializer.hpp
init/src/: initializer.cpp
interface/: customerCLI.cpp  tellerCLI.cpp
interface/inc/: customerCLI.hpp  customerInterface.hpp  mainCLI.hpp  tellerCLI.hpp  tellerInterface.hpp  userInterface.hpp
interface/src/: customerCLI.cpp  mainCLI.cpp  tellerCLI.cpp
lib/: CMakeLists.txt
sql/: bank.sql
src/: customer.cpp  person.cpp  sqlite3db.cpp  teller.cpp  utils.cpp
test/: CMakeLists.txt  testDB.cpp  testDb.cpp  testPerson.cpp  testUtils.cpp
test/data/: test.sql
